--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.9",
     "axios": "^1.5.0",
     "loadash": "^1.0.0",
     "localforage": "^1.10.0",
